crates/spt-cli/tests/snapshots/help_snapshots__help_config.snap
---
source: crates/spt-cli/tests/help_snapshots.rs
assertion_line: 29
expression: out
---
Manage configuration files (init, validate, diff, render, reload)

Usage: spt config [OPTIONS] <COMMAND>

Commands:
  init      Initialize a new config file from a template
  validate  Validate config syntax, schema, and obvious mistakes
  doctor    Run environment checks against the loaded config
  render    Render the canonical (optionally redacted) config
  diff      Diff two config files
  migrate   Migrate a config between schema versions
  reload    Reload the running service's config
  pull      Pull a remote config over HTTPS with pinning
  trust     Manage remote-config trust pins
  encrypt   Encrypt a plaintext config to a sealed `SPTENC1` envelope
  decrypt   Decrypt a sealed `SPTENC1` envelope back to plaintext TOML
  edit      Open a sealed config in `$EDITOR`; re-seal on save
  crypt     Re-seal a sealed config under a new key (key rotation)
  help      Print this message or the help of the given subcommand(s)

Options:
      --config <PATH>
          Path to a single config file
          
          [env: SPT_CONFIG=]

      --config-dir <PATH>
          Path to a directory of `*.toml` configs (loaded in lexical order)

      --config-url <URL>
          HTTPS URL of a remote config to fetch
          
          [env: SPT_CONFIG_URL=]

      --config-fingerprint <SHA256>
          SHA-256 fingerprint pin for `--config-url`

      --state-dir <PATH>
          Override the runtime state directory
          
          [env: SPT_STATE_DIR=]

      --profile <NAME>
          Restrict operations to the named profile

      --output <OUTPUT>
          Output format for command results

          Possible values:
          - human: Human-readable text (default)
          - json:  Structured JSON
          - jsonl: JSON Lines (one record per line)
          - yaml:  YAML
          
          [default: human]

      --json
          Convenience alias for `--output json`

      --log-level <LOG_LEVEL>
          Tracing log level

          Possible values:
          - error: Only errors
          - warn:  Warnings and above
          - info:  Informational and above (default)
          - debug: Debug and above
          - trace: Trace and above (very verbose)
          
          [default: info]

      --color <COLOR>
          Color policy for human output

          Possible values:
          - auto:   Auto-detect based on tty
          - always: Always emit color escapes
          - never:  Never emit color escapes
          
          [default: auto]

  -q, --quiet
          Suppress non-essential output

  -v, --verbose...
          Increase verbosity (repeat for more)

      --no-color
          Disable color (legacy convenience flag; use `--color never`)

      --dry-run
          Show what would happen without making changes

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

EXAMPLES:
  spt config init --example smtp --path /etc/ssh-perma-tunnel/config.toml
  spt config validate --strict
  spt config render --redacted
  spt config diff --from old.toml --to new.toml
  spt config pull --url https://cfg.example/spt.toml --fingerprint <sha256> --cache
