crates/spt-cli/tests/snapshots/help_snapshots__help_firewall.snap
---
source: crates/spt-cli/tests/help_snapshots.rs
expression: out
---
Inspect and manage OS firewall / packet-filter rules

Usage: spt firewall [OPTIONS] <COMMAND>

Commands:
  plan          Plan rules without applying
  apply         Apply rules (idempotent)
  remove        Remove rules
  status        Show current applied state
  interfaces    List interfaces / bind targets
  bind-preview  Preview the bind for a forward
  gateway       Manage gateway/interface defaults in config
  policy        Inspect and manage GPO-style policy values
  help          Print this message or the help of the given subcommand(s)

Options:
      --config <PATH>
          Path to a single config file
          
          [env: SPT_CONFIG=]

      --config-dir <PATH>
          Path to a directory of `*.toml` configs (loaded in lexical order)

      --config-url <URL>
          HTTPS URL of a remote config to fetch
          
          [env: SPT_CONFIG_URL=]

      --config-fingerprint <SHA256>
          SHA-256 fingerprint pin for `--config-url`

      --state-dir <PATH>
          Override the runtime state directory
          
          [env: SPT_STATE_DIR=]

      --profile <NAME>
          Restrict operations to the named profile

      --output <OUTPUT>
          Output format for command results

          Possible values:
          - human: Human-readable text (default)
          - json:  Structured JSON
          - jsonl: JSON Lines (one record per line)
          - yaml:  YAML
          
          [default: human]

      --json
          Convenience alias for `--output json`

      --log-level <LOG_LEVEL>
          Tracing log level

          Possible values:
          - error: Only errors
          - warn:  Warnings and above
          - info:  Informational and above (default)
          - debug: Debug and above
          - trace: Trace and above (very verbose)
          
          [default: info]

      --color <COLOR>
          Color policy for human output

          Possible values:
          - auto:   Auto-detect based on tty
          - always: Always emit color escapes
          - never:  Never emit color escapes
          
          [default: auto]

  -q, --quiet
          Suppress non-essential output

  -v, --verbose...
          Increase verbosity (repeat for more)

      --no-color
          Disable color (legacy convenience flag; use `--color never`)

      --dry-run
          Show what would happen without making changes

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

EXAMPLES:
  spt firewall plan --profile edge --json
  spt firewall apply --system --dry-run
  spt firewall remove --user
  spt firewall bind-preview --forward edge/db
  spt firewall gateway show --json
  spt firewall gateway set --default-interface Ethernet --tcp-nodelay true
  spt firewall gateway set --load-balance-strategy weighted --load-balance-fail-after 3
  spt firewall policy list --json
  spt firewall policy set Network.DefaultInterface Ethernet --scope user
