crates/spt-cli/tests/snapshots/help_snapshots__help_forward.snap
---
source: crates/spt-cli/tests/help_snapshots.rs
expression: out
---
Manage forwards (local/remote TCP, UDP)

Usage: spt forward [OPTIONS] <COMMAND>

Commands:
  list      List configured forwards
  show      Show a forward
  add       Add a forward
  explain   Explain how a forward is plumbed
  test      Run targeted forward tests
  throttle  Update throttle/limit knobs at runtime
  remove    Remove a forward
  help      Print this message or the help of the given subcommand(s)

Options:
      --config <PATH>
          Path to a single config file
          
          [env: SPT_CONFIG=]

      --config-dir <PATH>
          Path to a directory of `*.toml` configs (loaded in lexical order)

      --config-url <URL>
          HTTPS URL of a remote config to fetch
          
          [env: SPT_CONFIG_URL=]

      --config-fingerprint <SHA256>
          SHA-256 fingerprint pin for `--config-url`

      --state-dir <PATH>
          Override the runtime state directory
          
          [env: SPT_STATE_DIR=]

      --profile <NAME>
          Restrict operations to the named profile

      --output <OUTPUT>
          Output format for command results

          Possible values:
          - human: Human-readable text (default)
          - json:  Structured JSON
          - jsonl: JSON Lines (one record per line)
          - yaml:  YAML
          
          [default: human]

      --json
          Convenience alias for `--output json`

      --log-level <LOG_LEVEL>
          Tracing log level

          Possible values:
          - error: Only errors
          - warn:  Warnings and above
          - info:  Informational and above (default)
          - debug: Debug and above
          - trace: Trace and above (very verbose)
          
          [default: info]

      --color <COLOR>
          Color policy for human output

          Possible values:
          - auto:   Auto-detect based on tty
          - always: Always emit color escapes
          - never:  Never emit color escapes
          
          [default: auto]

  -q, --quiet
          Suppress non-essential output

  -v, --verbose...
          Increase verbosity (repeat for more)

      --no-color
          Disable color (legacy convenience flag; use `--color never`)

      --dry-run
          Show what would happen without making changes

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

EXAMPLES:
  spt forward add local --profile edge --listen 127.0.0.1:5432 --to db:5432 --tcp
  spt forward add remote --profile edge --listen 0.0.0.0:8080 --to web:80 --tcp
  spt forward add dynamic --profile edge --listen 127.0.0.1:1080
  spt forward throttle edge/db --in 10MiB/s --out 10MiB/s --connections 64
  spt forward test edge/db --connect --dns-name db.local
  spt forward remove edge/db
